[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "es_paras"
authors = [
    {name = "Kai Blin", email = "kblin@biosustain.dtu.dk"},
]
description = "experimentalSMASH - Try out PARAS for A domain predictions"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = {text = "AGPL-3.0-or-later"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: OS Independent",
]
dependencies = [
    "antismash @ git+https://github.com/antismash/antismash.git@refs/pull/480/head",
]
dynamic = ["version"]

[project.optional-dependencies]
testing = ["flake8", "flake8-pyproject", "pylint", "mypy", "pytest", "coverage"]

[project.scripts]
experimentalsmash = "es_paras.__main__:entrypoint"

[tool.setuptools.dynamic]
version = {attr = "es_paras.VERSION"}

[tool.flake8]
max-line-length = 100
